# SpectralMorph-VST

./: .gitignore  CMakeLists.txt  ManualTest  README.md
.github/workflows/: build.yml  release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: EnvelopeExtractor.h  FormantWarper.h  SpectralProcessor.cpp  SpectralProcessor.h
Tests/: WarpingTest.cpp  juce_core_mock.h
